feat(2.4): implement WindowsInputHandler with user32.dll SendInput P/Invoke
- WindowsInputHandler: full mouse (move/click/wheel) + keyboard (key/text)
  simulation via SendInput P/Invoke with absolute coordinate normalisation
- NativeMethods: INPUT/MOUSEINPUT/KEYBDINPUT structs, VirtualKey enum (A-Z,
  F1-F12, numpad, modifiers, OEM keys)
- MockInputHandler split into its own file; platform guard in Program.cs
  selects WindowsInputHandler on Windows, MockInputHandler elsewhere
- Test project references fixed (added ProjectReferences + Logging.Abstractions)
- 17 unit tests covering lifecycle, all event types, edge cases (null/bad keys)
- Removed stray root-level files left by previous bad session

--- a/src/RemoteLink.Desktop/tests/RemoteLink.Desktop.Tests/RemoteLink.Desktop.Tests.csproj
+++ b/src/RemoteLink.Desktop/tests/RemoteLink.Desktop.Tests/RemoteLink.Desktop.Tests.csproj
@@ -20,6 +20,12 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="../../RemoteLink.Desktop/RemoteLink.Desktop.csproj" />
+    <ProjectReference Include="../../../RemoteLink.Shared/RemoteLink.Shared/RemoteLink.Shared.csproj" />
   </ItemGroup>
 
 </Project>
