--- a/src/RemoteLink.Desktop/RemoteLink.Desktop/RemoteLink.Desktop.csproj
+++ b/src/RemoteLink.Desktop/RemoteLink.Desktop/RemoteLink.Desktop.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
+    <PackageReference Include="System.Drawing.Common" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
